--- a/core/static/core/css/styles.css
+++ b/core/static/core/css/styles.css
@@ -20,9 +20,7 @@ html, body {
 .footer {
     background-color: #0C252C;
     color: #fff;
-    padding: 20px;
     text-align: center;
-    width: 100%;
 }
 
 .logo {
@@ -37,7 +35,6 @@ html, body {
 .custom-footer {
     background-color: #0C252C;
     color: #fff !important;
-    padding: 20px;
     text-align: center;
 }
 
@@ -128,10 +125,6 @@ small {
     margin-bottom: 10px;
 }
 
-.mensaje {
-    margin-bottom: 15px;
-}
-
 .mensaje p {
     margin: 0;
 }
@@ -155,4 +148,44 @@ small {
     background-color: #f0f0f0;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.mensajes-container{
+    height: 200px;
+    overflow: auto;
+    border-radius: 10px;
+    padding: 10px;
+    width: 100%;
+    margin: 0 auto;
+    background-color: #f0f0f0;
+    position: relative;
+    scroll-behavior: smooth;
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+.mensajes-container::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 10px;
+}
+
+.mensajes-container .mensaje {
+    position: relative;
+    z-index: 1;
+    transition: transform 0.3s ease-in-out;
+}
+
+.mensajes-container .mensaje:hover {
+    transform: translateY(-5px);
+    z-index: 2;
+}
+
+.mensaje {
+    padding: 10px;
+    margin: 5px 0;
+    border-radius: 5px;
 }
