--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -83,12 +83,10 @@
             </div>
         </nav>
 
-        <div class="content flex-grow-1">
-            {% block content %}
-            {% endblock %}
-        </div>
+        {% block content %}
+        {% endblock %}
 
-        <footer class="footer mt-auto py-3 custom-footer">
+        <footer class=" py-3 w-100 custom-footer">
             <div class="container">
                 <span class="text-muted">&copy; Scholar Flame</span>
             </div>
