--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -86,9 +86,9 @@
         {% block content %}
         {% endblock %}
 
-        <footer class=" py-3 w-100 custom-footer">
+        <footer class="py-3 w-100 custom-footer">
             <div class="container">
-                <span class="text-muted">&copy; Scholar Flame</span>
+                <span>&copy; Scholar Flame</span>
             </div>
         </footer>
     </div>
