--- a/core/templates/core/bandeja_entrada.html
+++ b/core/templates/core/bandeja_entrada.html
@@ -48,18 +48,20 @@
                                         {{ fecha }}
                                     </div>
                                 {% endif %}
-                                {% for mensaje_info in mensajes %}
-                                    {% with mensaje=mensaje_info.mensaje es_remitente=mensaje_info.es_remitente %}
-                                        <div class="mensaje {% if es_remitente %}remite{% else %}destino{% endif %}">
-                                            <div class="d-flex justify-content-between">
-                                                <p class="me-2">{{ mensaje.contenido }}</p>
-                                                <div class="text-end fw-lighter align-self-end">
-                                                    <p>{{ mensaje.timestamp|time:"H:i" }}</p>
+                                <div class="mensaje-group">
+                                    {% for mensaje_info in mensajes %}
+                                        {% with mensaje=mensaje_info.mensaje es_remitente=mensaje_info.es_remitente %}
+                                            <div class="mensaje {% if es_remitente %}remite{% else %}destino{% endif %}">
+                                                <div class="d-flex justify-content-between">
+                                                    <p class="me-2">{{ mensaje.contenido }}</p>
+                                                    <div class="text-end fw-lighter align-self-end">
+                                                        <p>{{ mensaje.timestamp|time:"H:i" }}</p>
+                                                    </div>
                                                 </div>
                                             </div>
-                                        </div>
-                                    {% endwith %}
-                                {% endfor %}
+                                        {% endwith %}
+                                    {% endfor %}
+                                </div>
                             {% endwith %}
                         {% endfor %}
                     </div>
@@ -68,9 +70,13 @@
                     {% csrf_token %}
                     <input type="hidden" name="accion" value="enviar_mensaje">
                     <input type="hidden" name="usuario_id" value="{{ conversacion_seleccionada.usuario.id }}">
-                    <div class="text-end my-1">
-                        {{ conversacion_seleccionada.form_mensaje }}
-                        <button type="submit" class="btn btn-custom my-1">Enviar</button>
+                    <div class="d-flex justify-content-between align-items-center my-1" style="width: 100%;">
+                        <div class="w-80" style="width: 90%;">
+                            {{ conversacion_seleccionada.form_mensaje }}
+                        </div>
+                        <div class="w-20" style="width: 8%;">
+                            <button type="submit" class="btn btn-custom w-100">Enviar</button>
+                        </div>
                     </div>
                 </form>
             {% else %}
