--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -25,7 +25,7 @@
         <nav class="navbar navbar-expand-lg custom-navbar navbar-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="{% static 'core/img/logo_SCHOLAR_FLAME.jpg' %}" id="Logo" alt="Logo" class="logo">
+                    <img src="{% static 'core/img/logo_SCHOLAR_FLAME.jpg' %}" id="Logo" alt="Logo" class="logo rounded">
                 </a>
                 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,7 +53,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#"> ¡Hola!  {{ user.username }} </a>
                         </li>
-                        
+
                         <li class="nav-item">
                             {% if request.user.usuariodetalles.es_estudiante %}
                                 <a class="nav-link" href="#">Educación {{ nivel_educacional }} </a>
