--- a/core/templates/registration/login.html
+++ b/core/templates/registration/login.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
 </head>
 
-<body id="fondo" class="d-flex justify-content-center align-items-center vh-100">
+<body id="fondo" class="d-flex justify-content-center align-items-center">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-xl-4 col-lg-6 col-md-8 col-sm-12">
@@ -19,7 +19,7 @@
 
                         <h3>Iniciar sesión</h3>
                         <hr>
-                        <img src=" {% static 'core/img/logo_SCHOLAR_FLAME.jpg' %} " class="card-img-top" alt="logo-login">
+                        <img src=" {% static 'core/img/logo_SCHOLAR_FLAME.jpg' %} " class="card-img-top rounded" alt="logo-login">
                         <h4>¡Bienvenido!</h4>
                         <p>Ingresa tu usuario y contraseña para iniciar sesión</p>
 
