--- a/core/templates/registration/registro.html
+++ b/core/templates/registration/registro.html
@@ -9,15 +9,15 @@
     <link rel="stylesheet" href="{% static 'core/css/bootstrap.css' %}" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
 </head>
-<body id="fondo" class="d-flex justify-content-center align-items-center vh-100">
+<body id="fondo" class="d-flex justify-content-center align-items-center">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-xl-6 col-lg-8 col-md-10 col-sm-12">
-                <div class="card text-center">
+                <div class="card text-center" style="overflow-y: scroll; max-height: 90vh;">
                     <div class="card-body">
                         <h3>Registro de Usuario</h3>
                         <hr>
-                        <img src="{% static 'core/img/logo_SCHOLAR_FLAME.jpg' %}" class="card-img-top" alt="logo-login">
+                        <img src="{% static 'core/img/logo_SCHOLAR_FLAME.jpg' %}" class="card-img-top rounded" alt="logo-login">
                         <form action = "" method="post" class="form-login mx-auto">
 
                             {% csrf_token %}  
