--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -42,7 +42,10 @@
                             <a class="nav-link" href="#">Noticias</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'bandeja_entrada'%}">Mensajes</a>
+                            <a href="{% url 'bandeja_entrada' %}" class="nav-link">Mensajes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'notificaciones' %}">Notificaciones</a>
                         </li>
                     </ul>
                     
