--- a/core/static/core/css/styles.css
+++ b/core/static/core/css/styles.css
@@ -178,6 +178,19 @@ small {
     flex-direction: column-reverse;
 }
 
+.conversaciones-container{
+    max-height: 60vh;
+    overflow: auto;
+    border-radius: 10px;
+    padding: 10px;
+    width: 100%;
+    margin: 0 auto;
+    position: relative;
+    scroll-behavior: smooth;
+    display: flex;
+    flex-direction: column;
+}
+
 .mensajes-container::after {
     content: "";
     position: absolute;
